# editalo-ei

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_shortcuts.rs  commands.rs  main.rs
src/components/ui/: BaseIcon.vue  EmptyState.vue  ExportModal.vue  IconButton.vue  NumberField.vue  ToastStack.vue  UnsavedChangesModal.vue
src/composables/: useClipFilmstrip.ts  useClipWaveform.ts  useKeyboardShortcuts.ts  useUnsavedGuard.ts  useWindowControls.ts
src/data/: defaults.ts
src/layouts/: EditorLayout.vue
src/lib/: browserNavigationGuard.ts
src/modules/inspector/: InspectorPanel.vue  PropertyGroup.vue
src/modules/media-library/: MediaItem.vue  MediaLibrary.vue
src/modules/preview/: PlayerControls.vue  PreviewLayer.vue  PreviewPanel.vue
src/modules/statusbar/: StatusBar.vue
src/modules/timeline/: ClipBlock.vue  Playhead.vue  TimeRuler.vue  TimelinePanel.vue  TimelineToolbar.vue  TrackHeader.vue  TrackRow.vue
src/modules/titlebar/: WindowControls.vue
src/modules/topbar/: EditMenu.vue  FileMenu.vue  ToolbarMenu.vue  TopBar.vue  ViewMenu.vue
src/stores/: project.ts  timeline.ts  ui.ts
src/styles/: base.css  fonts.css  tokens.css
src/tauri/: commands.ts
src/types/: index.ts
src/utils/: clipMediaCache.ts  format.ts  id.ts  mediaSrcCache.ts  recentProjects.ts  time.ts  trackCompat.ts
