[package]
name = "editalo-ei"
version = "0.1.0"
description = "Editá-lo-ei — editor de vídeo desktop"
authors = ["você"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-minimize", "window-start-dragging", "window-maximize", "window-unmaximize", "window-close",
  "dialog-open",
  "dialog-save",
  "shell-open",
  "process-command-api",
  "protocol-asset",
  "path-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
